# RawDataPluginSample

./: .gitignore  .gitmodules  CMakeLists.txt  README.cn.md  README.md
.github/workflows/: build.yml  flutter-smoke-build.yml
VideoObserverPlugin/: VideoObserverPlugin.cpp  VideoObserverPlugin.h  plugin_c_api.cpp  plugin_c_api.h
android/: build.gradle
android/src/main/: AndroidManifest.xml
ci/: grep_version.sh
cmake/: VersionInfo.rc.in  framework.cmake  sdk.download.cmake  sdk.url.cmake
cxx/: AudioFrameObserver.cpp  AudioFrameObserver.h  VideoFrameObserver.cpp  VideoFrameObserver.h  plugin_base.h  plugin_c_api.cpp  plugin_c_api.h
dcg/android/app/: build.gradle
dcg/android/app/src/main/: AndroidManifest.xml
dcg/android/gradle/wrapper/: gradle-wrapper.properties
dcg/ci/: build-android.bat  build-android.sh  build-ios.sh  build-linux.sh  build-mac.sh  build-windows.bat
flutter/video_raw_data_example_plugin/: README.md  pubspec.yaml
flutter/video_raw_data_example_plugin/android/: build.gradle
flutter/video_raw_data_example_plugin/example/android/app/: build.gradle
flutter/video_raw_data_example_plugin/example/macos/Runner/Configs/: AppInfo.xcconfig
flutter/video_raw_data_example_plugin/example/windows/: CMakeLists.txt
flutter/video_raw_data_example_plugin/example/windows/runner/: main.cpp
flutter/video_raw_data_example_plugin/ios/: video_raw_data_example_plugin.podspec
flutter/video_raw_data_example_plugin/ios/Classes/: VideoRawDataExamplePlugin.m
flutter/video_raw_data_example_plugin/ios/VideoObserverPlugin.xcframework/: Info.plist
flutter/video_raw_data_example_plugin/ios/VideoObserverPlugin.xcframework/ios-arm64_armv7/VideoObserverPlugin.framework/: Info.plist
flutter/video_raw_data_example_plugin/lib/: video_raw_data_example_plugin.dart
flutter/video_raw_data_example_plugin/macos/: VideoObserverPlugin.podspec  video_raw_data_example_plugin.podspec
flutter/video_raw_data_example_plugin/macos/Classes/: VideoRawDataExamplePlugin.swift
flutter/video_raw_data_example_plugin/windows/: CMakeLists.txt  video_raw_data_example_plugin.cpp  video_raw_data_example_plugin.h
frameworks/flutter/video_raw_data/: .gitignore  README.md  pubspec.yaml
frameworks/flutter/video_raw_data/android/: CMakeLists.txt  build.gradle  settings.gradle
frameworks/flutter/video_raw_data/android/src/main/: AndroidManifest.xml
frameworks/flutter/video_raw_data/android/src/main/kotlin/com/example/video_raw_data/: VideoRawDataPlugin.kt
frameworks/flutter/video_raw_data/example/: README.md  pubspec.yaml
frameworks/flutter/video_raw_data/example/android/app/: build.gradle
frameworks/flutter/video_raw_data/example/ios/Runner/: Info.plist
frameworks/flutter/video_raw_data/example/ios/Runner.xcodeproj/: project.pbxproj
frameworks/flutter/video_raw_data/example/lib/: main.dart
frameworks/flutter/video_raw_data/example/macos/Flutter/: GeneratedPluginRegistrant.swift
frameworks/flutter/video_raw_data/example/macos/Runner.xcodeproj/: project.pbxproj
frameworks/flutter/video_raw_data/example/test/: widget_test.dart
frameworks/flutter/video_raw_data/example/windows/: CMakeLists.txt
frameworks/flutter/video_raw_data/example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
frameworks/flutter/video_raw_data/ios/: VideoObserverPlugin.podspec  video_raw_data.podspec
frameworks/flutter/video_raw_data/ios/Classes/: SwiftVideoRawDataPlugin.swift  VideoRawDataPlugin.h  VideoRawDataPlugin.m
frameworks/flutter/video_raw_data/lib/: video_raw_data.dart
frameworks/flutter/video_raw_data/lib/src/: native_plugin_api_bindings.dart
frameworks/flutter/video_raw_data/macos/: video_raw_data.podspec
frameworks/flutter/video_raw_data/macos/Classes/: VideoRawDataPlugin.mm  VideoRawDataPlugin.swift
frameworks/flutter/video_raw_data/test/: video_raw_data_method_channel_test.dart  video_raw_data_test.dart
frameworks/flutter/video_raw_data/windows/: CMakeLists.txt  video_raw_data_plugin.cpp  video_raw_data_plugin.h  video_raw_data_plugin_c_api.cpp
frameworks/flutter/video_raw_data/windows/include/video_raw_data/: video_raw_data_plugin_c_api.h
frameworks/flutter/video_raw_data_example_plugin/: ffigen_config.yaml
frameworks/flutter/video_raw_data_example_plugin/android/: settings.gradle
frameworks/flutter/video_raw_data_example_plugin/example/: README.md  pubspec.yaml
frameworks/flutter/video_raw_data_example_plugin/example/lib/: main.dart
frameworks/flutter/video_raw_data_example_plugin/example/test/: widget_test.dart
frameworks/flutter/video_raw_data_example_plugin/ios/Classes/: SwiftVideoRawDataExamplePlugin.swift  VideoRawDataExamplePlugin.h
frameworks/flutter/video_raw_data_example_plugin/macos/VideoObserverPlugin.framework/: VideoObserverPlugin
frameworks/flutter/video_raw_data_example_plugin/windows/: video_raw_data_example_plugin_c_api.cpp
include/: AgoraBase.h  AgoraMediaBase.h  IAgoraMediaEngine.h  IAgoraMediaPlayer.h  IAgoraParameter.h  IAgoraRtcEngine.h  IAgoraRtcEngineEx.h
include/internal/c/: bridge.h  c_error.h  c_player.h  c_rte.h  channel.h  common.h  handle.h  info.h  log.h  metadata.h  observer.h  old.h  options.h
include/internal/c/device/: audio.h  audio_device_manager.h  device.h  video.h  video_device_manager.h
include/internal/c/stream/: cdn_stream.h  local_cdn_stream.h  local_realtime_stream.h  local_stream.h  realtime_stream.h  remote_cdn_stream.h  remote_realtime_stream.h  remote_stream.h  stream.h
include/internal/c/track/: camera_video_track.h  canvas.h  layout.h  local_audio_track.h  local_track.h  local_video_track.h  mic_audio_track.h  mixed_video_track.h  remote_audio_track.h  remote_track.h  remote_video_track.h  screen_video_track.h  track.h  video_track.h  view.h
include/internal/c/user/: local_user.h  remote_user.h  user.h
include/internal/c/utils/: buf.h  frame.h  rect.h  string.h  uuid.h
platform/android/: build.gradle  settings.gradle
scripts/: build-android.sh  build-ios.sh  build-mac.sh  build-windows.bat  build-windows.sh  grep_version.sh
(+35 files in other folders)
